mir/src/snapshots/transmute_mir__tests__struct_instantiation_nested.snap
---
source: mir/src/lib.rs
expression: mir
---
Ok(
    Mir {
        functions: [
            FunctionId(0) => Function {
                identifier: Identifier {
                    id: IdentId(6),
                    span: 4:13; [92, 93],
                },
                symbol_id: SymbolId(21),
                parameters: [],
                variables: {
                    SymbolId(24): Variable {
                        identifier: Identifier {
                            id: IdentId(7),
                            span: 5:17; [114, 115],
                        },
                        symbol_id: SymbolId(24),
                        type_id: TypeId(6),
                        expression: ExprId(2),
                        mutable: false,
                    },
                },
                body: Some(
                    ExprId(3),
                ),
                ret: TypeId(1),
                parent: Namespace(
                    NamespaceId(0),
                ),
            },
        ],
        structs: [
            StructId(0) => Struct {
                identifier: Identifier {
                    id: IdentId(1),
                    span: 2:16; [16, 21],
                },
                symbol_id: SymbolId(3),
                fields: Some(
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(2),
                                span: 2:24; [24, 29],
                            },
                            index: 0,
                            symbol_id: SymbolId(22),
                            type_id: TypeId(4),
                        },
                    ],
                ),
                parent: Namespace(
                    NamespaceId(0),
                ),
            },
            StructId(1) => Struct {
                identifier: Identifier {
                    id: IdentId(4),
                    span: 3:16; [56, 61],
                },
                symbol_id: SymbolId(4),
                fields: Some(
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(5),
                                span: 3:24; [64, 69],
                            },
                            index: 0,
                            symbol_id: SymbolId(23),
                            type_id: TypeId(5),
                        },
                    ],
                ),
                parent: Namespace(
                    NamespaceId(0),
                ),
            },
        ],
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "Inner",
            IdentId(2) => "field",
            IdentId(3) => "number",
            IdentId(4) => "Outer",
            IdentId(5) => "inner",
            IdentId(6) => "f",
            IdentId(7) => "s",
            IdentId(8) => "core",
            IdentId(9) => "add",
            IdentId(10) => "boolean",
            IdentId(11) => "div",
            IdentId(12) => "eq",
            IdentId(13) => "ge",
            IdentId(14) => "gt",
            IdentId(15) => "le",
            IdentId(16) => "lt",
            IdentId(17) => "mul",
            IdentId(18) => "neg",
            IdentId(19) => "neq",
            IdentId(20) => "sub",
            IdentId(21) => "void",
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(
                            1,
                        ),
                        span: 5:51; [148, 149],
                    },
                ),
                span: 5:51; [148, 149],
                type_id: TypeId(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    SymbolId(3),
                    StructId(0),
                    [
                        (
                            SymbolId(22),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 5:36; [133, 151],
                type_id: TypeId(5),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: StructInstantiation(
                    SymbolId(4),
                    StructId(1),
                    [
                        (
                            SymbolId(23),
                            ExprId(1),
                        ),
                    ],
                ),
                span: 5:21; [118, 153],
                type_id: TypeId(6),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(3),
                        StmtId(6),
                    ],
                ),
                span: 4:17; [96, 164],
                type_id: TypeId(2),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Assignment(
                    Direct(
                        SymbolId(24),
                    ),
                    ExprId(2),
                ),
                span: 5:21; [118, 153],
                type_id: TypeId(6),
            },
        ],
        statements: [
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Expression(
                    ExprId(4),
                ),
                span: 5:13; [110, 154],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: Ret(
                    None,
                ),
                span: 0:0; [0, 0],
            },
        ],
        namespaces: [
            NamespaceId(0) => (
                None,
                IdentId(0),
            ),
            NamespaceId(1) => (
                Some(
                    NamespaceId(0),
                ),
                IdentId(8),
            ),
        ],
        symbols: [
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Struct,
                type_id: TypeId(5),
                ident_id: IdentId(1),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Struct,
                type_id: TypeId(6),
                ident_id: IdentId(4),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(21),
                    Void,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(21),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(3),
                    Number,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(3),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(10),
                    Boolean,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(10),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(20),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(20),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(19),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(19),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(19),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(9),
                ident_id: IdentId(19),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(10),
                ident_id: IdentId(18),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(17),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(16),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(15),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(14),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(13),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(12),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(9),
                ident_id: IdentId(12),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(11),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(9),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: LetFn(
                    FunctionId(0),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(11),
                ident_id: IdentId(6),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Field(
                    IdentId(2),
                    0,
                ),
                type_id: TypeId(4),
                ident_id: IdentId(2),
            },
            SymbolId(23) => Symbol {
                id: SymbolId(23),
                kind: Field(
                    IdentId(5),
                    0,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(5),
            },
            SymbolId(24) => Symbol {
                id: SymbolId(24),
                kind: Let,
                type_id: TypeId(6),
                ident_id: IdentId(7),
            },
        ],
        types: [
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Struct(
                SymbolId(3),
                StructId(0),
            ),
            TypeId(6) => Struct(
                SymbolId(4),
                StructId(1),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(10) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(11) => Function(
                [],
                TypeId(1),
            ),
        ],
    },
)
