mir/src/snapshots/transmute_mir__tests__structs_same_field_names.snap
---
source: mir/src/lib.rs
expression: make_mir(hir)
---
Ok(
    Mir {
        functions: [],
        structs: [
            StructId(0) => Struct {
                identifier: Identifier {
                    id: IdentId(0),
                    span: 2:20; [20, 25],
                },
                symbol_id: SymbolId(18),
                fields: Some(
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(1),
                                span: 2:28; [28, 33],
                            },
                            index: 0,
                            symbol_id: SymbolId(20),
                            type_id: TypeId(4),
                        },
                    ],
                ),
                parent: None,
            },
            StructId(1) => Struct {
                identifier: Identifier {
                    id: IdentId(3),
                    span: 3:20; [63, 68],
                },
                symbol_id: SymbolId(19),
                fields: Some(
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(1),
                                span: 3:28; [71, 76],
                            },
                            index: 0,
                            symbol_id: SymbolId(21),
                            type_id: TypeId(10),
                        },
                    ],
                ),
                parent: None,
            },
        ],
        identifiers: [
            IdentId(0) => "Inner",
            IdentId(1) => "field",
            IdentId(2) => "number",
            IdentId(3) => "Outer",
            IdentId(4) => "add",
            IdentId(5) => "boolean",
            IdentId(6) => "div",
            IdentId(7) => "eq",
            IdentId(8) => "ge",
            IdentId(9) => "gt",
            IdentId(10) => "le",
            IdentId(11) => "lt",
            IdentId(12) => "mul",
            IdentId(13) => "neg",
            IdentId(14) => "neq",
            IdentId(15) => "string",
            IdentId(16) => "sub",
            IdentId(17) => "void",
        ],
        expressions: [],
        statements: [
        ],
        symbols: [
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: NativeType(
                    IdentId(17),
                    Void,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(17),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: NativeType(
                    IdentId(15),
                    String,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(15),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(2),
                    Number,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(2),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(5),
                    Boolean,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(5),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(16),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(14),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(14),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(9),
                ident_id: IdentId(13),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(12),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(11),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(10),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(9),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(8),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(7),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(7),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(6),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(4),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(4),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Struct,
                type_id: TypeId(10),
                ident_id: IdentId(0),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Struct,
                type_id: TypeId(11),
                ident_id: IdentId(3),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Field(
                    IdentId(1),
                    0,
                ),
                type_id: TypeId(4),
                ident_id: IdentId(1),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Field(
                    IdentId(1),
                    0,
                ),
                type_id: TypeId(10),
                ident_id: IdentId(1),
            },
        ],
        types: [
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => String,
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(10) => Struct(
                SymbolId(18),
                StructId(0),
            ),
            TypeId(11) => Struct(
                SymbolId(19),
                StructId(1),
            ),
        ],
    },
)
