mir/src/snapshots/transmute_mir__tests__use_outside_function.snap
---
source: mir/src/lib.rs
expression: mir
---
Ok(
    Mir {
        functions: [
            FunctionId(0) => Function {
                identifier: Identifier {
                    id: IdentId(2),
                    span: 3:17; [41, 42],
                },
                symbol_id: SymbolId(21),
                parameters: [],
                variables: {},
                body: Some(
                    ExprId(0),
                ),
                ret: TypeId(1),
                parent: Namespace(
                    NamespaceId(1),
                ),
            },
            FunctionId(1) => Function {
                identifier: Identifier {
                    id: IdentId(4),
                    span: 7:17; [121, 122],
                },
                symbol_id: SymbolId(22),
                parameters: [],
                variables: {},
                body: Some(
                    ExprId(3),
                ),
                ret: TypeId(1),
                parent: Namespace(
                    NamespaceId(2),
                ),
            },
        ],
        structs: [],
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "ns1",
            IdentId(2) => "f",
            IdentId(3) => "ns2",
            IdentId(4) => "g",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "boolean",
            IdentId(8) => "div",
            IdentId(9) => "eq",
            IdentId(10) => "ge",
            IdentId(11) => "gt",
            IdentId(12) => "le",
            IdentId(13) => "lt",
            IdentId(14) => "mul",
            IdentId(15) => "neg",
            IdentId(16) => "neq",
            IdentId(17) => "number",
            IdentId(18) => "sub",
            IdentId(19) => "void",
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(8),
                    ],
                ),
                span: 3:21; [45, 47],
                type_id: TypeId(2),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Identifier(
                            SymbolId(21),
                        ),
                        span: 8:17; [143, 144],
                    },
                ),
                span: 8:17; [143, 144],
                type_id: TypeId(9),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: FunctionCall(
                    SymbolId(21),
                    [],
                ),
                span: 8:17; [143, 146],
                type_id: TypeId(1),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(4),
                    ],
                ),
                span: 7:21; [125, 161],
                type_id: TypeId(2),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Block(
                    [
                        StmtId(9),
                        StmtId(10),
                    ],
                ),
                span: 8:17; [143, 147],
                type_id: TypeId(1),
            },
        ],
        statements: [
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Expression(
                    ExprId(4),
                ),
                span: 8:17; [143, 147],
            },
            StmtId(8) => Statement {
                id: StmtId(8),
                kind: Ret(
                    None,
                ),
                span: 3:21; [45, 47],
            },
            StmtId(9) => Statement {
                id: StmtId(9),
                kind: Expression(
                    ExprId(2),
                ),
                span: 8:17; [143, 147],
            },
            StmtId(10) => Statement {
                id: StmtId(10),
                kind: Ret(
                    None,
                ),
                span: 8:17; [143, 147],
            },
        ],
        namespaces: [
            NamespaceId(0) => (
                None,
                IdentId(0),
            ),
            NamespaceId(1) => (
                Some(
                    NamespaceId(0),
                ),
                IdentId(1),
            ),
            NamespaceId(2) => (
                Some(
                    NamespaceId(0),
                ),
                IdentId(3),
            ),
            NamespaceId(3) => (
                Some(
                    NamespaceId(0),
                ),
                IdentId(5),
            ),
        ],
        symbols: [
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(19),
                    Void,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(19),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(17),
                    Number,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(17),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(7),
                    Boolean,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(7),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(18),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(16),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(16),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(15),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(14),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(13),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(12),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(11),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(10),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(9),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(9),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(8),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(6),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: LetFn(
                    FunctionId(0),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(9),
                ident_id: IdentId(2),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: LetFn(
                    FunctionId(1),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(9),
                ident_id: IdentId(4),
            },
        ],
        types: [
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Function(
                [],
                TypeId(1),
            ),
        ],
    },
)
